--- a/index.html
+++ b/index.html
@@ -15,32 +15,34 @@
 
 <body>
     <!-- Header Start -->
-    <header class="header">
+    <header class="header container">
         <!-- Header Start -->
         <div class="row">
-            <div class="profile-left col-sm-6 col-xs-8">
-                <div class="profile-content">
-                    <div class="profile-info ">
-                        <ul>
-                            <li><a href="tel:0928055859" class="icon-click"><i class="fa-solid fa-phone btn-icon "></i>
-                                    <h3 class="profile-text">&nbsp;0928055859</h3>
-                                </a></li>
-                            <li><a href="mailTo:hsufengs@gmail.com" class="icon-click"><i class="fa-solid fa-envelope btn-icon"></i>
-                                    <h3 class="profile-text">&nbsp;hsufengs@gmail.com</h3>
-                                </a></li>
-                            <li><a href="" class="icon-click"><i class="fa-solid fa-hashtag btn-icon"></i>
-                                    <h3 class="profile-text">&nbsp; hsufengs@linkin</h3>
-                                </a></li>
-                        </ul>
-                    </div>
-                    <h2 class="profile-job color-primary">Front End Engineer</h2>
-                    <h1 class="profile-name color-primary">許鳳升</h1>
+            <div class="profile-left col-sm-6 col-xs-4">
+                <div class="profile-imgout">
+                <img class="profile-img" src="./images/portrait.png" >
+                </img>
                 </div>
             </div>
-            <div class="profile-right col-sm-6 col-xs-4">
-                <div class="profile-imgout">
-                <div class="profile-img">
-                </div>
+            <div class="profile-right col-sm-6 col-xs-8">
+                <div class="profile-content">
+                    <div class="profile-info ">
+                    <div class="profile-top color-primary">
+                    <h2 class="profile-job ">Front End Engineer</h2>
+                    <h1 class="profile-name ">許鳳升</h1>   
+                    </div>
+                        <ul class="profile-bottom ">
+                            <li><a href="tel:0928055859" class="icon-click"><i class="icon-out fa-solid fa-phone btn-icon "></i></a> <p class="profile-text">&nbsp;0928055859</p>   
+                                </li>
+                            <li><a href="mailTo:hsufengs@gmail.com" class="icon-click"><i class="icon-out fa-solid fa-envelope btn-icon"></i></a> <p class="profile-text">&nbsp;hsufengs@gmail.com</p>
+                                </li>
+                            <li><a href="https://medium.com/@hsufengs" class="icon-click">
+                                <i class="icon-out  fas fa-sticky-note btn-icon"></i></a>
+                                <p class="profile-text">&nbsp; hsufengs@Medium</p>
+                                </li>
+                        </ul>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -85,8 +87,8 @@
                                     <h4 class="skill-text">JavaScript</h4>
                                 </div>
                                 <div class="skill-item col-sm-3">
-                                    <i class="fa-brands fa-js skill-icon"></i>
-                                    <h4 class="skill-text">jQuery</h4>
+                                    <i class="fas fa-registered skill-icon"></i>
+                                    <h4 class="skill-text">RWD</h4>
                                 </div>
                                 <div class="skill-item col-sm-3">
                                     <i class="fa-brands fa-github skill-icon"></i>
@@ -124,17 +126,17 @@
             </div> 
             <div class="about-content col-sm-10 col-sm-push-1">
                 <div class="about-text ">
-                    <h5>我是許鳳升，來自彰化鹿港。家裡從事在地小吃，自小養成不怕生、善於與人交際的獨立個性。由於喜歡動手做，大學選擇服裝設計科系學習車縫、金屬工藝等專業技能。做衣服就像寫網頁，從資料搜集設計發想，過程中面對技術困難，思考解決方法也向外尋求辦法，透過一遍遍的練習奠定扎實基礎，沈浸在成品帶來成就感的同時，也享受學習的過程。畢業後到日本打工遊學，在多種文化交流下能夠以更多視角看待問題，在語言隔閡上，自主查詢網路資源，加入當地交流社團，製造學習環境。<br>
+                    <h5>我是許鳳升，來自彰化鹿港。家裡從事在地小吃，養成不怕生、善於與人交際的獨立個性。由於喜歡動手做，大學選擇服裝設計科系學習車縫、金屬工藝等專業技能。做衣服就像寫網頁，從資料搜集、設計發想，過程中面對技術困難，思考解決方法外也向外尋求協助，透過一遍遍的練習奠定扎實基礎，沈浸在成品帶來成就感的同時，也享受學習的過程。畢業後到日本打工遊學，在多種文化交流下能夠以更多視角看待問題，在語言隔閡上，自主查詢網路資源，加入當地交流社團，製造學習環境。<br>
                     <br>
                     [ 工作經驗 ]<br>
-                    近三年半的外派生活，職務為鞋底開發日文業務。在日、中、越多語言的環境中，除了良好溝通能力還精進製鞋知識，經過思考判斷傳達內容，讓產品在符合客戶需求及工廠技術可達的平衡下生產。在客戶與新廠商中擔任協商橋樑，協助訂定日程及規範、成功採用2種以上新材應用在主要大形體。一人作業，控管開發流程及時辰門檻，每半年平均協助20款形體完成開發進入量產，協助中國業務全數移轉至越南。以換位思考方式管理約20名當地員工，定期關心每位工作狀況，調整業務、回報上級。<br>
+                    近三年半的外派生活，職務為鞋底開發日文業務。在日、中、越多語言的環境中，除了良好溝通能力還精進製鞋知識，學習如何傳達精準內容，讓產品在符合客戶需求及工廠技術可達的平衡下生產。在客戶與新廠商中擔任協商橋樑，協助訂定日程及規範、成功採用2種以上新材應用在主要大形體。一人作業，控管開發流程及時辰門檻，每半年平均協助20款形體完成開發進入量產，協助中國業務全數移轉至越南。以換位思考方式管理約20名當地員工，定期關心每位工作狀況，調整業務、回報上級。<br>
                     <br>
                     [ 職涯轉型 ]<br>
-                    2022年在UI/UX帶領購買了網頁設計線上課程並接觸到HTML和CSS，完成課程後，發現蠻喜歡網頁能馬上反饋程式內容及解bug的成就，於是報名了實體課程系統性的學習前端技能，專題中主要負責前端開發，使用HTML5、CSS3、Bootstrap切版，JavaScript、Node.js串接API、連接後台，增加網頁功能，與組員透過git版本控制合作完成專題。過程中培養閱讀文件及撰寫規範能力，寫出乾淨清楚的code。利用課餘時間製作Side Project，除了完成前端，期許自己能不斷精進完成後端。<br>
+                    2022年在UI/UX帶領購買了網頁設計線上課程並接觸到HTML和CSS，很喜歡網頁能馬上反饋程式內容及解bug的成就，於是報名了實體課程，系統性的學習前端技能，專題中主要負責前端開發，使用HTML5ㄏCSS3、Bootstrap切版，JavaScript串接API、Vue渲染資料頁面，與組員透過git版本控制合作完成專題。過程中培養資源查找及閱讀文件能力、透過邏輯拆解細項，綜合所學一步步完成目標功能。利用閒暇時間自主學習，加強JS及Vue觀念及撰寫，經思考內化、整理成筆記及文章。<br>
                     <br>
                     [ 自我期許 ]<br>
-                    在快速變化環境中，希望未來在職場上能持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。<br>
-                    相信過往培養的能力能夠讓我勝任這份工作，期待加入貴公司後，在解bug時不被零食櫃餵養胖狀態下，快速地與團隊一同成長，謝謝！     
+                    期許在資訊快速迭代的環境中，持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。<br>
+                    相信過往培養的能力能夠讓我勝任這份工作，期待加入貴公司後，在解bug時不被養胖狀態下，快速地與團隊一同成長，謝謝！     
                     <br>
                     <br>                  
                     </h5>
@@ -185,40 +187,31 @@
                 <div class="work-list">
                     <div class="work-item" data-aos="zoom-in-up">
                         <div class="row">
-                            <div class="col-sm-6 col-sm-push-5">
-                                <div class="work-img">    
-                                    <a href="">
-                                        <div class="img-inner img-inner4-3">
-                                            <div class="image" style="background-image: url(./images/work001_thumb.jpg);"></div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 col-sm-pull-5">
-                                <div class="work-text-right">
-                                    <h2 class="color-primary work-title-left">展場空間租借 </h2>
-                                     <h4 class="work-subtitle">資策會大專題</h4>
-                                    <p class="work-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="work-item" data-aos="zoom-in-up">
-                        <div class="row">
                             <div class="col-sm-6 col-sm-push-1">
                                 <div class="work-img">    
                                     <a href="">
                                         <div class="img-inner img-inner4-3">
-                                            <div class="image" style="background-image: url(./images/work002_thumb.jpg);"></div>
+                                            <div class="image" style="background-image: url(./images/workone.gif);"></div>
                                         </div>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-5 col-sm-push-1">
                                 <div class="work-text-left">
-                                    <h2  class="color-primary work-title-right">食食仔仔米糕 </h2>
-                                     <h4 class="work-subtitle">實戰作品</h4>
-                                    <p class="work-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae!</p>
+                                    <h2  class="color-primary work-title-right">展場空間租借</h2>
+                                    <div class="work-subtitle">
+                                        <button class="work-btn">Github</button>
+                                        <button class="work-btn">Figma</button>
+                                     </div>
+                                     <div class="work-text">
+                                        <ol>
+                                            <li><p>HTML、CSS、Bootstrap網頁切版</p></li>
+                                            <li><p>JS、jQuery串接Heroku平台傳遞接收Web資料</p></li>
+                                            <li><p>JS建立Intersection Observer API適時載入新資訊</p></li>
+                                            <li><p>Vue元件化，打包區塊重複掛載各分頁  </p></li>
+                                            <li><p>jspdf將頁面轉為pdf檔並提供下載</p></li>
+                                        </ol>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +223,7 @@
     <!-- Footer Start -->
     <footer class="footer bg-color-secondary">
     <div class="container">
-        <p class="footer-text color-primary">2022/10</p>
+        <p class="footer-text color-primary">2023/03</p>
     </div>
     </footer>
 
