--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="row">
                             <div class="col-sm-6 col-sm-push-1">
                                 <div class="work-img">    
-                                    <a href="">
+                                    <a href="https://fenghsu.github.io/exhibition/facility">
                                         <div class="img-inner img-inner4-3">
                                             <div class="image" style="background-image: url(./images/workone.gif);"></div>
                                         </div>
@@ -200,8 +200,8 @@
                                 <div class="work-text-left">
                                     <h2  class="color-primary work-title-right">展場空間租借</h2>
                                     <div class="work-subtitle">
-                                        <button class="work-btn">Github</button>
-                                        <button class="work-btn">Figma</button>
+                                        <button class="work-btn"><a href="https://github.com/fenghsu/exhibition">Github</a></button>
+                                        <button class="work-btn"> <a href="https://www.figma.com/file/QMJG6nGixi1AiMvwdiTDMc/Untitled?node-id=0%3A1&t=Brtoe8rXwbFYNxgV-1">Figma</a> </button>
                                      </div>
                                      <div class="work-text">
                                         <ol>
