--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="skill-content-right col-sm-4 " data-aos="fade-left">
                             <div class="language-item ">
                                 <i class="fa-solid fa-earth-americas skill-icon"></i>
-                                <h4 class="skill-text">English | Toeic 550</h4>
+                                <h4 class="skill-text">English | 中等</h4>
                             </div>
                             <div class="language-item">
                                 <i class="fa-solid fa-earth-asia skill-icon"></i>
@@ -132,7 +132,7 @@
                     近三年半的外派生活，職務為鞋底開發日文業務。在日、中、越多語言的環境中，除了良好溝通能力還精進製鞋知識，學習如何傳達精準內容，讓產品在符合客戶需求及工廠技術可達的平衡下生產。在客戶與新廠商中擔任協商橋樑，協助訂定日程及規範、成功採用2種以上新材應用在主要大形體。一人作業，控管開發流程及時辰門檻，每半年平均協助20款形體完成開發進入量產，協助中國業務全數移轉至越南。以換位思考方式管理約20名當地員工，定期關心每位工作狀況，調整業務、回報上級。<br>
                     <br>
                     [ 職涯轉型 ]<br>
-                    2022年在UI/UX帶領購買了網頁設計線上課程並接觸到HTML和CSS，很喜歡網頁能馬上反饋程式內容及解bug的成就，於是報名了實體課程，系統性的學習前端技能，專題中主要負責前端開發，使用HTML5ㄏCSS3、Bootstrap切版，JavaScript串接API、Vue渲染資料頁面，與組員透過git版本控制合作完成專題。過程中培養資源查找及閱讀文件能力、透過邏輯拆解細項，綜合所學一步步完成目標功能。利用閒暇時間自主學習，加強JS及Vue觀念及撰寫，經思考內化、整理成筆記及文章。<br>
+                    2022年在UI/UX帶領購買了網頁設計線上課程並接觸到HTML和CSS，很喜歡網頁能馬上反饋程式內容及解bug的成就，於是報名了實體課程，系統性的學習前端技能，專題中主要負責前端開發，使用HTML5、CSS3、Bootstrap切版，JavaScript串接API、Vue渲染資料頁面，與組員透過git版本控制合作完成專題。過程中培養資源查找及閱讀文件能力、透過邏輯拆解細項，綜合所學一步步完成目標功能。利用閒暇時間自主學習，加強JS及Vue觀念及撰寫，經思考內化、整理成筆記及文章。<br>
                     <br>
                     [ 自我期許 ]<br>
                     期許在資訊快速迭代的環境中，持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。<br>
