--- a/index.html
+++ b/index.html
@@ -20,29 +20,27 @@
         <div class="row">
             <div class="profile-left col-sm-6 col-xs-6">
                 <div class="profile-imgout">
-                <img class="profile-img" src="./images/portrait.png" >
-                </img>
+                <img class="profile-img" src="./images/portrait.png" />
                 </div>
             </div>
             <div class="profile-right col-sm-6 col-xs-6">
                 <div class="profile-content">
                     <div class="profile-info ">
-                    <div class="profile-top color-primary">
-                    <h2 class="profile-job ">Front End Engineer</h2>
-                    <h1 class="profile-name ">許鳳升</h1>   
-                    </div>
+                        <div class="profile-top color-primary">
+                            <h2 class="profile-job ">Front End Engineer</h2>
+                            <h1 class="profile-name ">許鳳升</h1>   
+                        </div>
                         <ul class="profile-bottom ">
-                            <li><a href="tel:0928055859" class="icon-click"><i class="icon-out fa-solid fa-phone btn-icon "></i></a> <p class="profile-text">&nbsp;0928055859</p>   
-                                </li>
-                            <li><a href="mailTo:hsufengs@gmail.com" class="icon-click"><i class="icon-out fa-solid fa-envelope btn-icon"></i></a> <p class="profile-text">&nbsp;hsufengs@gmail.com</p>
-                                </li>
+                            <li><a href="tel:0928055859" class="icon-click"><i class="icon-out fa-solid fa-phone btn-icon "></i></a><p class="profile-text">&nbsp;0928055859</p>   
+                            </li>
+                            <li><a href="mailTo:hsufengs@gmail.com" class="icon-click"><i class="icon-out fa-solid fa-envelope btn-icon"></i></a><p class="profile-text">&nbsp;hsufengs@gmail.com</p>
+                            </li>
                             <li><a href="https://medium.com/@hsufengs" class="icon-click">
                                 <i class="icon-out  fas fa-sticky-note btn-icon"></i></a>
                                 <p class="profile-text">&nbsp; hsufengs@Medium</p>
-                                </li>
+                            </li>
                         </ul>
                     </div>
-                    
                 </div>
             </div>
         </div>
@@ -68,8 +66,7 @@
                                     <h4 class="skill-text">Photoshop</h4>
                                 </div>
                                 <div class="skill-item col-sm-3">
-                                    <i class="fa-brands fa-figma skill-icon
-                             "></i>
+                                    <i class="fa-brands fa-figma skill-icon"></i>
                                     <h4 class="skill-text">Figma</h4>
                                 </div>
                                 <div class="skill-item col-sm-3">
@@ -83,20 +80,38 @@
                             </div>
                             <div class="skill-list ">
                                 <div class="skill-item col-sm-3 ">
+                                    <i class="fa-brands fa-bootstrap skill-icon"></i>
+                                    <h4 class="skill-text">Bootstrap</h4>
+                                </div>
+                                <div class="skill-item col-sm-3">
                                     <i class="fa-brands fa-js skill-icon"></i>
                                     <h4 class="skill-text">JavaScript</h4>
                                 </div>
                                 <div class="skill-item col-sm-3">
-                                    <i class="fas fa-registered skill-icon"></i>
-                                    <h4 class="skill-text">RWD</h4>
-                                </div>
-                                <div class="skill-item col-sm-3">
-                                    <i class="fa-brands fa-github skill-icon"></i>
-                                    <h4 class="skill-text">Github</h4>
+                                    <i class="fa-brands fa-react skill-icon"></i>
+                                    <h4 class="skill-text">React</h4>
                                 </div>
                                 <div class="skill-item col-sm-3">
                                     <i class="fa-brands fa-vuejs skill-icon"></i>
                                     <h4 class="skill-text">Vue</h4>
+                                </div>
+                            </div>
+                            <div class="skill-list ">
+                                <div class="skill-item col-sm-3 ">
+                                    <i class="fa-solid fa-display skill-icon"></i>
+                                    <h4 class="skill-text">RWD</h4>
+                                </div>
+                                <div class="skill-item col-sm-3">
+                                    <i class="fa-solid fa-network-wired skill-icon"></i>
+                                    <h4 class="skill-text">Axios</h4>
+                                </div>
+                                <div class="skill-item col-sm-3">
+                                    <i class="fa-brands fa-git skill-icon"></i>
+                                    <h4 class="skill-text">git</h4>
+                                </div>
+                                <div class="skill-item col-sm-3">
+                                    <i class="fa-brands fa-github skill-icon"></i>
+                                    <h4 class="skill-text">Github</h4>
                                 </div>
                             </div>
                         </div>
@@ -108,6 +123,10 @@
                             <div class="language-item">
                                 <i class="fa-solid fa-earth-asia skill-icon"></i>
                                 <h4 class="skill-text">Japanese | N3</h4>
+                            </div>
+                            <div class="language-item">
+                                <i class="fa-solid fa-earth-europe skill-icon"></i>
+                                <h4 class="skill-text">台語 | 中等</h4>
                             </div>
                         </div>
                     </div>
@@ -126,17 +145,17 @@
             </div> 
             <div class="about-content col-sm-10 col-sm-push-1">
                 <div class="about-text ">
-                    <h5>我是許鳳升，來自彰化鹿港。家裡從事在地小吃，養成不怕生、善於與人交際的獨立個性。由於喜歡動手做，大學選擇服裝設計科系學習車縫、金屬工藝等專業技能。做衣服就像寫網頁，從資料搜集、設計發想，過程中面對技術困難，思考解決方法外也向外尋求協助，透過一遍遍的練習奠定扎實基礎，沈浸在成品帶來成就感的同時，也享受學習的過程。畢業後到日本打工遊學，在多種文化交流下能夠以更多視角看待問題，在語言隔閡上，自主查詢網路資源，加入當地交流社團，製造學習環境。<br>
-                    <br>
-                    [ 工作經驗 ]<br>
-                    近三年半的外派生活，職務為鞋底開發日文業務。在日、中、越多語言的環境中，除了良好溝通能力還精進製鞋知識，學習如何傳達精準內容，讓產品在符合客戶需求及工廠技術可達的平衡下生產。在客戶與新廠商中擔任協商橋樑，協助訂定日程及規範、成功採用2種以上新材應用在主要大形體。一人作業，控管開發流程及時辰門檻，每半年平均協助20款形體完成開發進入量產，協助中國業務全數移轉至越南。以換位思考方式管理約20名當地員工，定期關心每位工作狀況，調整業務、回報上級。<br>
+                    <h5>我是許鳳升，來自彰化鹿港。家裡從事在地小吃，自小養成不怕生、善於交際的獨立個性。由於喜歡動手做，大學選擇服裝設計科系學習如何產出產品。做衣服就像寫網頁，從資料搜集設計發想，過程中面對技術困難，思考解決方法也懂的向外尋求辦法，透過一遍遍的練習奠定扎實基礎。<br>
                     <br>
                     [ 職涯轉型 ]<br>
-                    2022年在UI/UX帶領購買了網頁設計線上課程並接觸到HTML和CSS，很喜歡網頁能馬上反饋程式內容及解bug的成就，於是報名了實體課程，系統性的學習前端技能，專題中主要負責前端開發，使用HTML5、CSS3、Bootstrap切版，JavaScript串接API、Vue渲染資料頁面，與組員透過git版本控制合作完成專題。過程中培養資源查找及閱讀文件能力、透過邏輯拆解細項，綜合所學一步步完成目標功能。利用閒暇時間自主學習，加強JS及Vue觀念及撰寫，經思考內化、整理成筆記及文章。<br>
+                    2022 在UI/UX帶領接觸到HTML和CSS，進而報名資策會課程並組隊完成前端專案開發。接著有機會與業界前輩合作開發公司後台管理系統。回顧學習曲線從原本前端三劍客HTML、CSS、JS手刻畫面功能到使用React、Vue框架，原本接資料夾內的json檔進階到研究REST API平台串接資料，學習 git版控與他人合作。在血與淚中成長，過程中也培養閱讀文件及撰寫規範能力，期許自己能不斷精持續學習。
+                    <br>
+                    <br>
+                    [ 工作經驗 ]<br>
+                    近三年半的外派生活，職務為鞋底開發日文業務。在日、中、越多語言的環境中，培養良好溝通能力。能透過經驗及專業，做客戶端及工廠間的橋樑，讓產品在符合客戶需求及工廠技術可達的平衡下生產。控管開發流程及時辰門檻，每半年平均協助20款形體完成開發進入量產。以換位思考方式管理約20名當地員工，關心每位工作狀況，調整業務，回報上級。<br>
                     <br>
                     [ 自我期許 ]<br>
-                    期許在資訊快速迭代的環境中，持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。<br>
-                    相信過往培養的能力能夠讓我勝任這份工作，期待加入貴公司後，在解bug時不被養胖狀態下，快速地與團隊一同成長，謝謝！     
+                    在快速變化環境中，希望未來在職場上能持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。
                     <br>
                     <br>                  
                     </h5>
@@ -159,14 +178,19 @@
                                 <p class="timeline-text">2016 日本打工遊學</p>
                             </div>
                         </div>
-                        <div class="timeline-row col-sm-3">
+                        <div class="timeline-row col-sm-2">
                             <div class="timeline-card">
-                                <p class="timeline-text">2017 寶成有限公司｜海外業務</p>
+                                <p class="timeline-text">2017 海外業務</p>
                             </div>
                         </div>
-                        <div class="timeline-row col-sm-3">
+                        <div class="timeline-row col-sm-2">
                             <div class="timeline-card">
-                                <p class="timeline-text">2022 台中資展｜前端養成班</p>
+                                <p class="timeline-text">2022 資策會課程培訓</p>
+                            </div>
+                        </div>
+                        <div class="timeline-row col-sm-2">
+                            <div class="timeline-card">
+                                <p class="timeline-text">2023 前端工程助理</p>
                             </div>
                         </div>
                     </div>
@@ -189,18 +213,47 @@
                         <div class="row">
                             <div class="col-sm-6 col-sm-push-1">
                                 <div class="work-img">    
-                                    <a href="https://fenghsu.github.io/exhibition/facility">
                                         <div class="img-inner img-inner4-3">
-                                            <div class="image" style="background-image: url(./images/workone.gif);"></div>
+                                            <div class="image" style="background-image: url(./images//reactproject.png);"></div>
                                         </div>
-                                    </a>
                                 </div>
                             </div>
                             <div class="col-sm-5 col-sm-push-1">
                                 <div class="work-text-left">
-                                    <h2  class="color-primary work-title-right">展場空間租借</h2>
+                                    <h2  class="color-primary work-title-right">React產品後台管理</h2>
                                     <div class="work-subtitle">
-                                        <button class="work-btn"><a href="https://github.com/fenghsu/exhibition">Github</a></button>
+                                        <button class="work-btn"><a href="https://fenghsu.github.io/will-win/">線上查看</a></button>
+                                     </div>
+                                     <div class="work-text">
+                                        <ol>
+                                            <li><p>React 架設網頁前端</p></li>
+                                            <li><p>Axios 傳接第三方平台內容</p></li>
+                                            <li><p>Reducer 集中管理資料</p></li>
+                                            <li><p>Router 歸納分頁路徑</p></li>
+                                            <li><p>Component 模組化重複性高的元件</p></li>
+                                            <li><p>Formik 進行驗證處理</p></li>
+                                        </ol>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-list">
+                    <div class="work-item" data-aos="zoom-in-up">
+                        <div class="row">
+                            <div class="col-sm-6 col-sm-push-1">
+                                <div class="work-img">    
+                                        <div class="img-inner img-inner4-3">
+                                            <div class="image" style="background-image: url(./images/workone.gif);"></div>
+                                        </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-5 col-sm-push-1">
+                                <div class="work-text-left">
+                                    <h2  class="color-primary work-title-right">JavaScript展覽空間網頁</h2>
+                                    <div class="work-subtitle">
+                                        <button class="work-btn"><a href="https://fenghsu.github.io/exhibition/facility">線上查看</a></button>
                                         <button class="work-btn"> <a href="https://www.figma.com/file/QMJG6nGixi1AiMvwdiTDMc/Untitled?node-id=0%3A1&t=Brtoe8rXwbFYNxgV-1">Figma</a> </button>
                                      </div>
                                      <div class="work-text">
@@ -208,7 +261,7 @@
                                             <li><p>HTML、CSS、Bootstrap網頁切版</p></li>
                                             <li><p>JS、jQuery串接Heroku平台傳遞接收Web資料</p></li>
                                             <li><p>JS建立Intersection Observer API適時載入新資訊</p></li>
-                                            <li><p>Vue元件化，打包區塊重複掛載各分頁  </p></li>
+                                            <li><p>Vue元件化，打包區塊重複掛載各分頁</p></li>
                                             <li><p>jspdf將頁面轉為pdf檔並提供下載</p></li>
                                         </ol>
                                     </div>
