Adjust about content

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
             </div> 
             <div class="about-content col-sm-10 col-sm-push-1">
                 <div class="about-text ">
-                    <h5>我是許鳳升，來自彰化鹿港。家裡從事在地小吃，自小養成不怕生、善於交際的獨立個性。由於喜歡動手做，大學選擇服裝設計科系學習如何產出產品。做衣服就像寫網頁，從資料搜集設計發想，過程中面對技術困難，思考解決方法也懂的向外尋求辦法，透過一遍遍的練習奠定扎實基礎。<br>
+                    <h5>我是許鳳升，來自彰化鹿港。大學專業為服裝設計，學習如何將抽象想法，經過發想、步驟拆解、問題排除等過程具象化，並透過一遍遍的練習奠定扎實基礎，培養良好耐性與韌性。<br>
                     <br>
                     [ 職涯轉型 ]<br>
-                    2022 在UI/UX帶領接觸到HTML和CSS，進而報名資策會課程並組隊完成前端專案開發。接著有機會與業界前輩合作開發公司後台管理系統。回顧學習曲線從原本前端三劍客HTML、CSS、JS手刻畫面功能到使用React、Vue框架，原本接資料夾內的json檔進階到研究REST API平台串接資料，學習 git版控與他人合作。在血與淚中成長，過程中也培養閱讀文件及撰寫規範能力，期許自己能不斷精持續學習。
+                    2022接觸到HTML和CSS，進而報名資策會課程並組隊完成前端專案開發。接著有機會與業界前輩合作開發公司後台管理系統。回顧學習曲線從原本前端三劍客HTML、CSS、JS手刻畫面功能到使用React、Vue框架，原本接資料夾內的json檔進階到研究REST API平台串接資料，學習 git版控與他人合作。在血與淚中成長，過程中也培養閱讀文件及撰寫規範能力，期許自己能不斷精持續學習。
                     <br>
                     <br>
                     [ 工作經驗 ]<br>
-                    近三年半的外派生活，職務為鞋底開發日文業務。在日、中、越多語言的環境中，培養良好溝通能力。能透過經驗及專業，做客戶端及工廠間的橋樑，讓產品在符合客戶需求及工廠技術可達的平衡下生產。控管開發流程及時辰門檻，每半年平均協助20款形體完成開發進入量產。以換位思考方式管理約20名當地員工，關心每位工作狀況，調整業務，回報上級。<br>
+                    住日一年經驗，積極練習對話及尋求資源，加強自身的能力。接著越南海外派駐，擔任日文開發業務，主要做為日本品牌端和工廠間的主要窗口，控管開發時程，協調工廠解決技術問題，實現品牌端需求。長時間與日本企業配合經驗，學習嚴謹及有條理的工作方式寫程式，周全的前置準備，在撰寫過程中更能專注在新技術的開發。<br>
                     <br>
                     [ 自我期許 ]<br>
                     在快速變化環境中，希望未來在職場上能持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。
