--- a/index.html
+++ b/index.html
@@ -145,17 +145,23 @@
             </div> 
             <div class="about-content col-sm-10 col-sm-push-1">
                 <div class="about-text ">
-                    <h5>我是許鳳升，來自彰化鹿港。大學專業為服裝設計，學習如何將抽象想法，經過發想、步驟拆解、問題排除等過程具象化，並透過一遍遍的練習奠定扎實基礎，培養良好耐性與韌性。<br>
+                    <h5>我是許鳳升，畢業於服裝設計專業。大學學習歷程讓我擁有將抽象概念具象化的能力，對於開發中實現UI/UX設計是至關重要的技能。<br>
+                    <br>
+                    [ 工作經歷 ]<br>
+                    在日本生活了一年，有幸與來自各國的人共事，學習以多元化思維解決問題及尊重不同價值觀。接著外派越南，擔任鞋廠日文開發業務，作為品牌端和工廠之間的主要聯絡窗口，負責控制開發時程和解決技術問題。在長時間與日本企業合作的過程中，學會了嚴謹有序的工作方式，程式撰寫也習慣做好規劃再執行。
+                    <br>
                     <br>
                     [ 職涯轉型 ]<br>
-                    2022接觸到HTML和CSS，進而報名資策會課程並組隊完成前端專案開發。接著有機會與業界前輩合作開發公司後台管理系統。回顧學習曲線從原本前端三劍客HTML、CSS、JS手刻畫面功能到使用React、Vue框架，原本接資料夾內的json檔進階到研究REST API平台串接資料，學習 git版控與他人合作。在血與淚中成長，過程中也培養閱讀文件及撰寫規範能力，期許自己能不斷精持續學習。
+                    工作中遇上系統操作困難時，會思考如何改善，提升使用者體驗，在過程中認識到UI/UX專業性及對這領域興趣。於是上網自學，在HTML和CSS構建網頁中，喜歡畫面帶來即時的成就感。離職後，報名了資策會課程，專心投入前端學習，多人協作完成專案開發。
                     <br>
                     <br>
-                    [ 工作經驗 ]<br>
-                    住日一年經驗，積極練習對話及尋求資源，加強自身的能力。接著越南海外派駐，擔任日文開發業務，主要做為日本品牌端和工廠間的主要窗口，控管開發時程，協調工廠解決技術問題，實現品牌端需求。長時間與日本企業配合經驗，學習嚴謹及有條理的工作方式寫程式，周全的前置準備，在撰寫過程中更能專注在新技術的開發。<br>
+                    [ 前端經驗 ]<br>
+                    在與業界前輩合作中，我負責新增後台管理系統，進行現有架構的分析和優化。擅長使用Redux、Route、Component實現功能。面對Bug時，會利用DevTools快速尋找問題的答案。<br>
+                    專案製作中，我注意到與後端作業進度不同導致資料命名不同步問題，於是進行了對第三方平台Heroku及Apiary的研究，經測試及需求評估，成功導入Apiary提升與後端溝通效率。
+                    <br>
                     <br>
                     [ 自我期許 ]<br>
-                    在快速變化環境中，希望未來在職場上能持續保有好奇心及敏捷度，跟團隊合作提升系統效能。短期目標在短時間內了解公司流程，累積實務上的經驗與能力。長期目標持續進修UI/UX及後端知識，成為能獨立作業且跨部門溝通的多角化員工。
+                    在資訊快速迭代的環境中，期許能夠保持好奇心和敏捷度，與團隊合作，提升系統的效能。短期目標是快速熟悉公司的流程，積累實際經驗。長期目標是持續深入學習前端相關技術，成為一個獨立作業且能夠跨部門溝通的多功能員工。
                     <br>
                     <br>                  
                     </h5>
@@ -225,6 +231,7 @@
                                         <button class="work-btn"><a href="https://fenghsu.github.io/will-win/">線上查看</a></button>
                                      </div>
                                      <div class="work-text">
+                                            <p>使用技術：MUI | React | Reducer | Redux | Axios</p>
                                         <ol>
                                             <li><p>React 架設網頁前端</p></li>
                                             <li><p>Axios 傳接第三方平台內容</p></li>
@@ -257,9 +264,10 @@
                                         <button class="work-btn"> <a href="https://www.figma.com/file/QMJG6nGixi1AiMvwdiTDMc/Untitled?node-id=0%3A1&t=Brtoe8rXwbFYNxgV-1">Figma</a> </button>
                                      </div>
                                      <div class="work-text">
+                                        <p>使用技術：Bootstrap | Vue | Ajax | RWD</p>
                                         <ol>
                                             <li><p>HTML、CSS、Bootstrap網頁切版</p></li>
-                                            <li><p>JS、jQuery串接Heroku平台傳遞接收Web資料</p></li>
+                                            <li><p>JS、jQuery串接Apiary平台傳遞接收Web資料</p></li>
                                             <li><p>JS建立Intersection Observer API適時載入新資訊</p></li>
                                             <li><p>Vue元件化，打包區塊重複掛載各分頁</p></li>
                                             <li><p>jspdf將頁面轉為pdf檔並提供下載</p></li>
@@ -276,7 +284,7 @@
     <!-- Footer Start -->
     <footer class="footer bg-color-secondary">
     <div class="container">
-        <p class="footer-text color-primary">2023/03</p>
+        <p class="footer-text color-primary">2024/03</p>
     </div>
     </footer>
 
